--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"save_dir": "Screenshots", "game_title": "UmamusumePrettyDerby_Jpn", "app_width": 100, "app_height": 400, "app_shift_x": 10, "app_shift_y": 300, "left_crop_ratio": 0.08, "right_crop_ratio": 0.09, "capture_delay": 0.1}
+{"save_dir": "D:/Download/UmaCap", "game_title": "UmamusumePrettyDerby_Jpn", "app_width": 100, "app_height": 400, "app_shift_x": 10, "app_shift_y": 300, "left_crop_ratio": 0.08, "right_crop_ratio": 0.09, "capture_delay": 0.1}
